@@ -3,5 +3,6 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Update libusb version to v1.0.26.
   * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
   * Add FORESEE FS35ND01GS1Y2 SPI NAND Flash support.
+  * Add ESMT F50D1G41LB(2M) SPI NAND Flash support.
 
- -- McMCC <mcmcc@mail.ru>  Tue, 31 Jan 2023 23:40:12 +0800
+ -- McMCC <mcmcc@mail.ru>  Sun, 26 Feb 2023 22:24:12 +0800
